<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonatype.buildsupport</groupId>
    <artifactId>public-parent</artifactId>
    <version>55</version>
  </parent>

  <groupId>org.sonatype.directjngine</groupId>
  <artifactId>directjngine-parent</artifactId>
  <version>2.2.11-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>${project.groupId}:${project.artifactId}</name>

  <url>https://github.com/sonatype/directjngine</url>

  <scm>
    <connection>scm:git:git://github.com/sonatype/directjngine.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/sonatype/directjngine.git</developerConnection>
    <url>https://github.com/sonatype/directjngine</url>
  </scm>

  <licenses>
    <license>
      <name>LGPL-3</name>
      <url>http://opensource.org/licenses/LGPL-3.0</url>
    </license>
  </licenses>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <buildsupport-bestpractices.skip>true</buildsupport-bestpractices.skip>
  </properties>
  
  <modules>
    <module>directjngine</module>
    <module>directjngine-demo</module>
  </modules>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>3.0</version>
          <configuration>
            <skip>true</skip>
            <failIfMissing>false</failIfMissing>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>com.sonatype.clm</groupId>
        <artifactId>clm-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>index</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
